[ci skip] Fix FUNDING.yml

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,3 @@
 # These are supported funding model platforms
 
-github: [shal]
-mono: ['https://send.monobank.com.ua/2FVYpRHoi']
+custom: https://send.monobank.com.ua/2FVYpRHoi
